--- a/musik.html
+++ b/musik.html
@@ -364,8 +364,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="4">
                 <div class="rank">4</div>
                 <div class="music-info">
-                    <h3>🎺 Jazz Fusion</h3>
-                    <p>Perpaduan jazz modern dengan sentuhan elektronik yang sophisticated.</p>
+                    <h3>双葉</h3>
+                    <p>双葉 itu kayak pelukan dalam lagu nggak menggurui, tapi terasa mendukung. Lagu ini bisa jadi sahabat bagi siapa saja yang sedang di ambang perubahan: antara masa remaja ke dewasa, antara kenangan dan mimpi yang ingin dikejar. Lagu yang membuat kita percaya bahwa semua luka, semua kenangan, semua “pertumbuhan kecil” itu, akhirnya akan jadi indah.</p>
                     <button class="play-button" onclick="playMusic(4)">
                         ▶️ Play Song
                     </button>
@@ -375,8 +375,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="5">
                 <div class="rank">5</div>
                 <div class="music-info">
-                    <h3>🎵 Pop Ballad</h3>
-                    <p>Melodi yang menyentuh hati dengan aransemen yang indah dan emosional.</p>
+                    <h3>Ari Lasso - Cinta Terakhir</h3>
+                    <p>Cinta Terakhir adalah lagu tentang penantian panjang yang akhirnya terbayar manis. Liriknya puitis, melodinya syahdu, dan suara khas Ari Lasso bikin emosi langsung terasa. Cocok banget buat momen refleksi cinta, atau sekadar tenggelam dalam rasa hangat menemukan seseorang yang terakhir.</p>
                     <button class="play-button" onclick="playMusic(5)">
                         ▶️ Play Song
                     </button>
@@ -386,8 +386,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="6">
                 <div class="rank">6</div>
                 <div class="music-info">
-                    <h3>🎧 Electronic Beat</h3>
-                    <p>Musik elektronik dengan drop yang powerful dan rhythm yang addictive.</p>
+                    <h3>Dangerholic</h3>
+                    <p>Dangerholic itu lagu penuh energi, berasa kayak suntikan adrenalin! Musiknya heboh dengan nuansa rock dan brass yang bikin semangat, sementara vibe-nya pas banget untuk tantangan dan ambisi. Cocok banget diputar saat butuh dorongan percaya diri atau lagi pengin mood jadi “all out”.</p>
                     <button class="play-button" onclick="playMusic(6)">
                         ▶️ Play Song
                     </button>
@@ -397,8 +397,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="7">
                 <div class="rank">7</div>
                 <div class="music-info">
-                    <h3>🎼 Classical Modern</h3>
-                    <p>Musik klasik dengan sentuhan modern yang elegan dan menenangkan.</p>
+                    <h3>Bling-Bang-Bang-Born</h3>
+                    <p>Bling-Bang-Bang-Born itu vibe-nya gokil banget! Beat-nya bikin kepala otomatis ngangguk, rap-nya lincah, dan refreinnya super catchy sampai susah lepas dari kepala. Lagu ini cocok banget jadi penyemangat, bikin suasana makin hidup, dan pas banget buat hype bareng teman.</p>
                     <button class="play-button" onclick="playMusic(7)">
                         ▶️ Play Song
                     </button>
@@ -408,8 +408,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="8">
                 <div class="rank">8</div>
                 <div class="music-info">
-                    <h3>🎤 R&B Groove</h3>
-                    <p>Groove R&B yang smooth dengan vocal yang soulful dan catchy.</p>
+                    <h3>Sunset di Tanah Anarki</h3>
+                    <p>Sunset di Tanah Anarki itu rock yang puitis keras tapi penuh rasa. Musiknya enerjik, liriknya romantis sekaligus berjiwa bebas, bikin pendengar ikut terbawa ke suasana senja yang indah tapi penuh makna. Cocok banget buat kamu yang suka lagu dengan semangat cinta dan kebebasan.</p>
                     <button class="play-button" onclick="playMusic(8)">
                         ▶️ Play Song
                     </button>
@@ -419,8 +419,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="9">
                 <div class="rank">9</div>
                 <div class="music-info">
-                    <h3>🥁 Hip Hop Beats</h3>
-                    <p>Beat hip hop yang heavy dengan rap lyrics yang powerful dan inspiring.</p>
+                    <h3>Endless Tears</h3>
+                    <p>Endless Tears itu lagu cinta yang manis sekaligus menyayat. Vokal duetnya harmonis, melodinya lembut, dan liriknya menggambarkan betapa cinta bisa jadi indah meski penuh rasa sakit. Cocok banget didengar saat rindu, saat mellow, atau sekadar ingin larut dalam emosi yang hangat tapi menyentuh.</p>
                     <button class="play-button" onclick="playMusic(9)">
                         ▶️ Play Song
                     </button>
@@ -430,8 +430,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
             <div class="music-card" data-song="10">
                 <div class="rank">10</div>
                 <div class="music-info">
-                    <h3>🎻 Indie Folk</h3>
-                    <p>Musik indie folk yang hangat dengan instrumen akustik yang natural.</p>
+                    <h3>"Unholy" - Sam Smith┃Japanese Version┃Feat. Ali Orok</h3>
+                    <p>Versi Jepang dari Unholy ini terasa segar dan unik! Dengan lirik dalam bahasa Jepang dan sentuhan vokal Ali Orok, lagu yang awalnya gelap dan bold jadi punya nuansa baru yang lebih dramatis tapi tetap catchy. Cocok banget buat yang suka eksplorasi musik lintas bahasa—familiar tapi tetap memberikan kejutan seru</p>
                     <button class="play-button" onclick="playMusic(10)">
                         ▶️ Play Song
                     </button>
@@ -501,8 +501,8 @@ Dan yang paling keren, musik itu nggak butuh bahasa cukup dengar, cukup rasa, se
         let isShuffled = false;
         let isRepeating = false;
         let trackList = [
-            "Chiisana Koi no Uta", "Butter-Fly", "葡萄踏みの唄 (Special Version)", "Jazz Fusion", "Pop Ballad",
-            "Electronic Beat", "Classical Modern", "R&B Groove", "Hip Hop Beats", "Indie Folk"
+            "Chiisana Koi no Uta", "Butter-Fly", "葡萄踏みの唄 (Special Version)", "双葉", "Cinta Terakhir",
+            "Dangerholic", "Bling-Bang-Bang-Born", "Sunset di Tanah Anarki", "Endless Tears", "Unholy - Sam Smith┃Japanese Version┃Feat. Ali Orok"
         ];
 
         // Initialize volume
